<resources>
    <string name="app_name">RadioButton</string>
    <string name="radio_button_text1">Yes</string>
    <string name="radio_button_text2">No</string>
    <string name="radio_button_text3">Maybe</string>
    <string name="text_view_question">Do you like programming?</string>
    <string name="text_view_text">Rate 0</string>
    <string name="text_view_text_rate">What is the rating of this course</string>
</resources>